# garten-timelapse

./: .gitignore  CONTEXT.md  README.md  pyproject.toml  zeitraffer.example.toml
.claude/skills/stabilisierter-zeitraffer/: SKILL.md
docs/adr/: 0001-stabilisierter-zeitraffer.md
docs/plans/: 0001-implementierungsplan.md
src/garten_timelapse/: __init__.py  __main__.py  cli.py  config.py  loader.py  pipeline.py  render.py  stabilize.py
tests/: conftest.py  test_config.py  test_loader.py  test_pipeline.py  test_render.py  test_stabilize.py
